--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <relativePath />
   </parent>
   <groupId>io.jenkins.plugins</groupId>
-  <artifactId>ntfy-sender</artifactId>
+  <artifactId>ntfy-notifier</artifactId>
   <version>${revision}${changelist}</version>
   <packaging>hpi</packaging>
   <name>TODO Plugin</name>
