add Priority radio button and add it to the requests

--- a/src/main/resources/io/jenkins/plugins/sample/NTFYNotifierBuilder/config.properties
+++ b/src/main/resources/io/jenkins/plugins/sample/NTFYNotifierBuilder/config.properties
@@ -2,5 +2,11 @@ Name=Server URL
 Topic=Topic
 Title=Title
 Message=Message
+Priority=Priority
+Priority_5=max
+Priority_4=high
+Priority_3=default
+Priority_2=low
+Priority_1=min
 French=French
 FrenchDescr=Check if we should say hello in French
