add markdown option and send with the request

--- a/src/main/resources/io/jenkins/plugins/sample/NTFYNotifierBuilder/config.properties
+++ b/src/main/resources/io/jenkins/plugins/sample/NTFYNotifierBuilder/config.properties
@@ -8,6 +8,6 @@ Priority_4=high
 Priority_3=default
 Priority_2=low
 Priority_1=min
-French=French
 Tags=Tags
+MarkDownFormatting=MarkDown formatting
 FrenchDescr=Check if we should say hello in French
