add delay message field and send with request

--- a/src/main/resources/io/jenkins/plugins/sample/NTFYNotifierBuilder/config.properties
+++ b/src/main/resources/io/jenkins/plugins/sample/NTFYNotifierBuilder/config.properties
@@ -9,5 +9,6 @@ Priority_3=default
 Priority_2=low
 Priority_1=min
 Tags=Tags
+DelayedMessage=Delayed message
 MarkDownFormatting=MarkDown formatting
 FrenchDescr=Check if we should say hello in French
